# bule

./: .bule.yaml  .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  all.sh  all_connect.sh  bounds.lp  bule.go  bule_lib.go  bule_test.go  cluster.sh  common.go  connect-first.bul  connect-winning.bul  connect.lp  counter.bul  go.mod  go.sum  main.go  make_release.sh  makefile  parser.go  parser_test.go  readme.md  run.sh  test-pb.sh  test.bul  test.lp  test.sh  test1.lp  test2.lp  test3.lp  test31.lp  test4.lp  todo.md
bdd/: bdd.go  translation.go  translation_test.go
benchmark/: analyse.go  readme.md
bule/: all.sh  bule  bule.go  bule2.go  makefile  run.sh  solve.sh  table.txt  table2.txt  table3.txt
bule2/: LICENSE  Makefile  README  bule2.go  dune  dune-project  test.gcnf
bule2/lib/: Ast.ml  Ast.mli  Circuit.ml  Circuit.mli  Dimacs.ml  Dimacs.mli  Lexer.mll  Parse.ml  Parse.mli  Parser.messages  Parser.mly  Print.ml  Print.mli  Solve.ml  Types.ml  dune
bule_lib/: bule_lib.go  bule_test.go  test.lp  test2.lp
circuit/: circuit.go  circuit_test.go
cmd/: add.go  clause_program.go  completion.go  configMap.go  dimacs.go  err.go  ground.go  grounder2.go  list.go  pb.go  rm.go  root.go  shuffle.go  solve.go  stages.go  version.go
config/: config.go
constraints/: atMostOne.go  atMostOne_test.go  cardinality.go  cardinality_test.go  categorize.go  categorize_test.go  combination_test.go  makefile  mdd_translation.go  mdd_translation_test.go  sn_translation.go  sn_translation_print.go  sn_translation_test.go  sorter_translation.go  threshold.go  uniqueId.go  (+3 more)
(+1249 files in other folders)
